<resources>
    <string name="app_name">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">News</string>
    <string name="sources">Sources</string>
    <string name="saved">Saved</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="lorem_ipsum_long">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="bbc_news">BBC News</string>
    <string name="author">Author</string>
    <string name="str_dot">-</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="back_online_message">We are back online</string>
    <string name="search">Search</string>
    <string name="_3_day_ago">3 day ago</string>
    <string name="category">Category</string>
    <string name="business">business</string>
    <string name="entertainment">entertainment</string>
    <string name="general">general</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">technology</string>
    <string name="sort_by">Sort By</string>
    <string name="popularity">popularity</string>
    <string name="relevancy">relevancy</string>
    <string name="publishedat">publishedAt</string>
    <string name="apply">Apply</string>
    <string name="read_more">Read more on website</string>
    <string name="country">Country</string>
    <string name="en">en</string>
</resources>